debug head script

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <script>
+alert("HEAD SCRIPT RAN");
+</script>
+
+  <script>
 (function () {
   const url = new URL(window.location.href);
   if (url.searchParams.has("v")) return;
