--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <meta http-equiv="expires" content="0" />
 
 
-  <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>myVic mock</title>
@@ -63,7 +62,7 @@
           <img src="assets/1vicroads.png" alt="Brand logo" />
         </div>
         <div class="greeting">
-          <div class="hello">Hi Charlie</div>
+          <div class="hello">Hi Orlando</div>
         </div>
       </header>
       <div class="card-grid">
@@ -187,7 +186,7 @@
 
         <div class="license-body">
   <div class="photo-box">
-    <img id="licPhoto" src="" alt="License photo">
+    <img id="licPhoto" src="assets/my-lic-photo" alt="License photo">
   </div>
 
   <div class="license-divider" aria-hidden="true"></div>
@@ -207,7 +206,7 @@
       </div>
 
       <div class="list-card flat">
-        <div class="name-title" id="licName">Charlie Skinner</div>
+        <div class="name-title" id="licName">Orlando Iodice</div>
         <div class="row">
           <div class="col">
             <div class="muted">Permit number</div>
@@ -234,7 +233,13 @@
         <div class="row">
           <div class="col">
             <div class="muted">Address</div>
-            <div class="value" id="licAddress">76 Nott st, Springfield, VIC 3000</div>
+            <div class="value" id="licAddress">196 Nelson Road</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="muted">Secondary address</div>
+            <div class="value">Albert Park, 3206</div>
           </div>
         </div>
         <div class="row">
@@ -473,3 +478,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+/
